# pypbn

./: .gitignore  CMakeLists.txt  README.md  setup.py
cmake/: CMIPFEMBVBINConfig.cmake.in  CMIPFEMBVBINGenerateConfig.cmake  FindClp.cmake  FindCoinUtils.cmake  FindIpopt.cmake
pypbn/: __init__.py  _fembv_bin_linear.py  _femh1_bin_linear.py
results/jra55/indices/csv/: jra55.mon.combined.detrended.difference.order1.signs.combined_set_1.csv  jra55.mon.combined.detrended.difference.order1.signs.combined_set_2.csv  jra55.mon.combined.detrended.difference.order1.signs.combined_set_3.csv  jra55.mon.combined.detrended.difference.order1.signs.combined_set_4.csv  jra55.mon.combined.detrended.difference.order2.signs.combined_set_1.csv  jra55.mon.combined.detrended.difference.order2.signs.combined_set_2.csv  jra55.mon.combined.detrended.difference.order2.signs.combined_set_3.csv  jra55.mon.combined.detrended.difference.order2.signs.combined_set_4.csv  jra55.mon.combined.detrended.polynomial.order1.signs.combined_set_1.csv  jra55.mon.combined.detrended.polynomial.order1.signs.combined_set_2.csv  jra55.mon.combined.detrended.polynomial.order1.signs.combined_set_3.csv  jra55.mon.combined.detrended.polynomial.order1.signs.combined_set_4.csv  jra55.mon.combined.detrended.polynomial.order2.signs.combined_set_1.csv  jra55.mon.combined.detrended.polynomial.order2.signs.combined_set_2.csv  jra55.mon.combined.detrended.polynomial.order2.signs.combined_set_3.csv  jra55.mon.combined.detrended.polynomial.order2.signs.combined_set_4.csv  jra55.mon.combined.signs.combined_set_1.csv  jra55.mon.combined.signs.combined_set_2.csv  jra55.mon.combined.signs.combined_set_3.csv  jra55.mon.combined.signs.combined_set_4.csv
results/ncep-r1/indices/csv/: ncep_r1.mon.combined.detrended.difference.order1.signs.combined_set_1.csv  ncep_r1.mon.combined.detrended.difference.order1.signs.combined_set_2.csv  ncep_r1.mon.combined.detrended.difference.order1.signs.combined_set_3.csv  ncep_r1.mon.combined.detrended.difference.order1.signs.combined_set_4.csv  ncep_r1.mon.combined.detrended.difference.order2.signs.combined_set_1.csv  ncep_r1.mon.combined.detrended.difference.order2.signs.combined_set_2.csv  ncep_r1.mon.combined.detrended.difference.order2.signs.combined_set_3.csv  ncep_r1.mon.combined.detrended.difference.order2.signs.combined_set_4.csv  ncep_r1.mon.combined.detrended.polynomial.order1.signs.combined_set_1.csv  ncep_r1.mon.combined.detrended.polynomial.order1.signs.combined_set_2.csv  ncep_r1.mon.combined.detrended.polynomial.order1.signs.combined_set_3.csv  ncep_r1.mon.combined.detrended.polynomial.order1.signs.combined_set_4.csv  ncep_r1.mon.combined.detrended.polynomial.order2.signs.combined_set_1.csv  ncep_r1.mon.combined.detrended.polynomial.order2.signs.combined_set_2.csv  ncep_r1.mon.combined.signs.combined_set_1.csv  (+5 more)
src/: clpsimplex_affiliations_solver.cpp  clpsimplex_affiliations_solver.hpp  densities.cpp  densities.hpp  fembv_bin_linear.cpp  fembv_bin_linear.hpp  femh1_bin_linear_distributions.cpp  femh1_bin_linear_distributions.hpp  femh1_bin_linear_hmc.cpp  femh1_bin_linear_hmc.hpp  femh1_bin_linear_mc.cpp  femh1_bin_linear_mc.hpp  femh1_bin_linear_mh.cpp  femh1_bin_linear_mh.hpp  linear_constraint.cpp  linear_constraint.hpp  local_linear_model.cpp  local_linear_model.hpp  local_linear_model_ipopt_solver.cpp  local_linear_model_ipopt_solver.hpp  pypbn.cpp  random_matrix.hpp
test/: test_femh1_bin_linear_distributions.cpp
